--- a/static/css/post.less
+++ b/static/css/post.less
@@ -13,7 +13,8 @@
         <article class="post">
             <header>
                 <a href="#" class="post_slug category-slug">
-                    <span class="cf-icon cf-icon-help"></span>
+                    <span class="category-slug_icon cf-icon cf-icon-bullhorn"></span>
+                    <span class="u-visually-hidden">Category:</span>
                     Announcements &amp; updates
                 </a>
                 <h1 class="post_header">
