--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4769,8 +4769,10 @@ img {
   }
 }
 .lt-ie9 .wrapper {
-  min-width: 800px;
   max-width: 960px;
+}
+.lt-ie9 body {
+  min-width: 800px;
 }
 .content_bar {
   height: 10px;
@@ -5981,10 +5983,6 @@ img {
     position: relative;
     clear: both;
   }
-}
-.lt-ie9 .hero_wrapper {
-  min-width: 800px;
-  max-width: 960px;
 }
 .hero_img-container {
   display: none;
