Updates cf-icons to support ie7.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -74,7 +74,7 @@
 
 // @import combined CF component Less and make any overrides
 @import (less) "../../vendor/cf-concat/cf.less";
-@cf-icons-path: "../fonts/";
+@cf-icon-path: "../fonts/";
 @grid_box-sizing-polyfill-path: "/cfgov-refresh/static/vendor/box-sizing-polyfill";
 
 
