Updates category slug in hero docs.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -8930,7 +8930,7 @@ a.focus .summary_header {
                             <div class="category-slug">
                                 <span class="category-slug_icon cf-icon cf-icon-bullhorn"></span>
                                 <span class="u-visually-hidden">Category:</span>
-                                Announcements & updates
+                                Category slug
                             </div>
                             <div class="summary">
                                 <h1 class="summary_header">Header</h1>
