Only make cat slug hover changes if it's an a element.

--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -210,7 +210,11 @@
     display: inline-block;
     // Eyeballed to 20px over h2.
     margin-bottom: unit(8px / @font-size, em);
-    .u-link__colors(@black, @pacific-80);
+    color: @black;
+
+    a& {
+        .u-link__colors(@black, @pacific-80);
+    }
 
     &_icon {
         margin-right: unit(2px / @font-size, em);
