--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -145,6 +145,126 @@ select[multiple].success {
 
 
 /* topdoc
+  name: Custom checkboxes
+  family: cfgov-misc
+  patterns:
+    - name: Default
+      markup: |
+        <span class="input">
+            <input type="checkbox" name="checkboxes-styled" id="checkboxes-styled-01" value="lorem">
+            <label for="checkboxes-styled-01"> Lorem</label>
+        </span>
+        <span class="input">
+            <input type="checkbox" name="checkboxes-styled" id="checkboxes-styled-02" value="ipsum">
+            <label for="checkboxes-styled-02"> Ipsum</label>
+        </span>
+        <span class="input">
+            <input type="checkbox" name="checkboxes-styled" id="checkboxes-styled-03" value="dolor">
+            <label for="checkboxes-styled-03"> Dolor</label>
+        </span>
+        <span class="input">
+            <input type="checkbox" name="checkboxes-styled" id="checkboxes-styled-04" value="sit">
+            <label for="checkboxes-styled-04"> Sit</label>
+        </span>
+        <script src="/static/js/main.min.js"></script>
+      notes:
+        - ".."
+  tags:
+    - cfgov-misc
+*/
+
+.input.is-enabled {
+
+    @input-width-px: 20px;
+    @input-width: unit(@input-width-px / @base-font-size-px, em);
+
+    // Wrapper styles
+    display: inline-block;
+    position: relative;
+    // Same margin as label elements.
+    margin-right: unit(6px / @base-font-size-px, em);
+    // Left padding that matches the input width so we can use absolute
+    // positioning to place the input here.
+    padding: 0 0 0 @input-width;
+
+    // Hide the input by layering a styled div on top
+    input {
+        position: absolute;
+            top: 4px;
+            left: 4px;
+        z-index: 0;
+    }
+
+    .input_checkbox,
+    .input_radio {
+        -webkit-box-sizing: border-box;
+           -moz-box-sizing: border-box;
+                box-sizing: border-box;
+        position: absolute;
+            top: 0;
+            left: 0;
+        z-index: 1;
+        width: @input-width;
+        height: @input-width;
+        background: @white;
+        border: 1px solid @black;
+    }
+    .input_radio {
+        border-radius: 100%;
+    }
+
+
+    // The label should be layered on top of everything so that when a user
+    // clicks it they will activate the input.
+
+    .input_label {
+        position: relative;
+        z-index: 2;
+        margin: 0 0 0 -@input-width;
+        padding-left: @input-width;
+        line-height: 1;
+    }
+
+    .input_text {
+        .form-label;
+        display: inline-block;
+        padding: 0
+                 unit(6 / @base-font-size-px, em)
+                 0
+                 // Eyeballed to 10px between the checkbox and the label text.
+                 unit(8 / @base-font-size-px, em);
+        line-height: unit(@input-width-px / @base-font-size-px);
+    }
+
+    &.is-hovered {
+        .input_checkbox,
+        .input_radio {
+            background-color: @green-tint;
+            border-color: @green;
+            outline: 1px solid @green;
+        }
+    }
+
+    &.is-checked {
+        .input_checkbox,
+        .input_radio {
+            background-color: @green;
+            border-color: @green;
+        }
+    }
+
+    &.is-focused {
+        .input_checkbox,
+        .input_radio {
+            border-color: @white;
+            outline: 2px solid @green;
+        }
+    }
+
+}
+
+
+/* topdoc
   name: Form labels
   family: cfgov-misc
   patterns:
