--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6966,10 +6966,10 @@ a.category-slug.active {
 /* NOTE: all select[multiple] styles extend input[type="text"]. */
 
 /* topdoc
-  name: Custom checkboxes
+  name: Custom form inputs
   family: cfgov-misc
   patterns:
-    - name: Default
+    - name: Checkboxes
       markup: |
         <label class="form-label">
             <input class="custom-input"
@@ -6992,16 +6992,33 @@ a.category-slug.active {
                    value="dolor">
             Dolor
         </label>
+    - name: Radio buttons
+      markup: |
         <label class="form-label">
             <input class="custom-input"
-                   type="checkbox"
-                   name="checkboxes-styled"
-                   value="sit">
-            Sit
+                   type="radio"
+                   name="radios-styled"
+                   value="lorem">
+            Lorem
         </label>
-        <script src="/static/js/main.min.js"></script>
-      notes:
-        - ".."
+        <label class="form-label">
+            <input class="custom-input"
+                   type="radio"
+                   name="radios-styled"
+                   value="ipsum">
+            Ipsum
+        </label>
+        <label class="form-label">
+            <input class="custom-input"
+                   type="radio"
+                   name="radios-styled"
+                   value="dolor">
+            Dolor
+        </label>
+    - name: JavaScript setup
+      markup: |
+        <script src="/vendor/jquery/jquery.js"></script>
+        <script src="/static/js/jquery.custom-input.js"></script>
   tags:
     - cfgov-misc
 */
@@ -7044,12 +7061,13 @@ a.category-slug.active {
   position: relative;
   z-index: 2;
   padding-left: 1.25em;
+  margin-right: 0.375em;
   line-height: 1;
 }
 
 .custom-input_text {
   display: inline-block;
-  padding: 0 0.375em 0 0.5em;
+  padding-left: 0.5em;
   line-height: 1.25;
 }
 
@@ -7074,6 +7092,22 @@ a.category-slug.active {
 .is-checked.is-focused .custom-input_radio {
   background-color: #2cb34a;
   border-color: #ffffff;
+  outline: 2px solid #2cb34a;
+}
+
+.is-hovered .custom-input_radio,
+.is-focused .custom-input_radio,
+.is-checked.is-hovered .custom-input_radio,
+.is-checked.is-focused .custom-input_radio {
+  outline: none;
+  -webkit-box-shadow: 0px 0px 0px 2px #2cb34a;
+  box-shadow: 0px 0px 0px 2px #2cb34a;
+}
+
+.is-hovered .custom-input_radio .lt-ie9,
+.is-focused .custom-input_radio .lt-ie9,
+.is-checked.is-hovered .custom-input_radio .lt-ie9,
+.is-checked.is-focused .custom-input_radio .lt-ie9 {
   outline: 2px solid #2cb34a;
 }
 
