--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -145,10 +145,10 @@ select[multiple].success {
 
 
 /* topdoc
-  name: Custom checkboxes
+  name: Custom form inputs
   family: cfgov-misc
   patterns:
-    - name: Default
+    - name: Checkboxes
       markup: |
         <label class="form-label">
             <input class="custom-input"
@@ -171,16 +171,33 @@ select[multiple].success {
                    value="dolor">
             Dolor
         </label>
+    - name: Radio buttons
+      markup: |
         <label class="form-label">
             <input class="custom-input"
-                   type="checkbox"
-                   name="checkboxes-styled"
-                   value="sit">
-            Sit
+                   type="radio"
+                   name="radios-styled"
+                   value="lorem">
+            Lorem
         </label>
-        <script src="/static/js/main.min.js"></script>
-      notes:
-        - ".."
+        <label class="form-label">
+            <input class="custom-input"
+                   type="radio"
+                   name="radios-styled"
+                   value="ipsum">
+            Ipsum
+        </label>
+        <label class="form-label">
+            <input class="custom-input"
+                   type="radio"
+                   name="radios-styled"
+                   value="dolor">
+            Dolor
+        </label>
+    - name: JavaScript setup
+      markup: |
+        <script src="/vendor/jquery/jquery.js"></script>
+        <script src="/static/js/jquery.custom-input.js"></script>
   tags:
     - cfgov-misc
 */
@@ -224,6 +241,8 @@ select[multiple].success {
         border: 1px solid @black;
     }
     &_radio {
+        // IE older than 9 does not support border-radius so checkboxes and
+        // radio buttons will look the same.
         border-radius: 100%;
     }
 
@@ -233,15 +252,13 @@ select[multiple].success {
         position: relative;
         z-index: 2;
         padding-left: @input-width;
+        margin-right: unit(6 / @base-font-size-px, em);
         line-height: 1;
     }
     &_text {
         display: inline-block;
-        padding: 0
-                 unit(6 / @base-font-size-px, em)
-                 0
-                 // Eyeballed to 10px between the checkbox and the label text.
-                 unit(8 / @base-font-size-px, em);
+        // Eyeballed to 10px between the checkbox and the label text.
+        padding-left: unit(8 / @base-font-size-px, em);
         line-height: unit(@input-width-px / @base-font-size-px);
     }
 
@@ -262,6 +279,22 @@ select[multiple].success {
             background-color: @green;
             border-color: @white;
             outline: 2px solid @green;
+        }
+    }
+    &_radio {
+        .is-hovered &,
+        .is-focused &,
+        .is-checked.is-hovered &,
+        .is-checked.is-focused & {
+            // box-shadow is being used instead of outline because outline
+            // does not respect border-radius.
+            outline: none;
+            box-shadow: 0px 0px 0px 2px @green;
+            // Older IE does not support border-radius or box-shadow it's ok to
+            // use outline here.
+            .lt-ie9 {
+                outline: 2px solid @green;
+            }
         }
     }
 }
