Updates form-group_item margins.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6391,6 +6391,12 @@ a.category-slug.active {
                 <option value="value2">Value 2</option>
                 <option value="value3">Value 3</option>
             </select>
+            <br>
+            <select class="form-group_item" name="select">
+                <option value="value1">Value 1</option>
+                <option value="value2">Value 2</option>
+                <option value="value3">Value 3</option>
+            </select>
         </div>
       codenotes:
         - |
@@ -6410,7 +6416,7 @@ a.category-slug.active {
   margin-top: 1.375em;
 }
 .form-group_item {
-  margin-bottom: 0.375em;
+  margin-bottom: 0.9375em;
 }
 /* topdoc
   name: Form actions
