--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6122,22 +6122,28 @@ a.category-slug.active {
   patterns:
     - name: Checkboxes
       markup: |
-        <label class="form-label">
+        <label class="form-label"
+               for="custom-input_checkbox-lorem">
             <input class="custom-input"
+                   id="custom-input_checkbox-lorem"
                    type="checkbox"
                    name="checkboxes-styled"
                    value="lorem">
             Lorem
         </label>
-        <label class="form-label">
+        <label class="form-label"
+               for="custom-input_checkbox-ipsum">
             <input class="custom-input"
+                   id="custom-input_checkbox-ipsum"
                    type="checkbox"
                    name="checkboxes-styled"
                    value="ipsum">
             Ipsum
         </label>
-        <label class="form-label">
+        <label class="form-label"
+               for="custom-input_checkbox-dolor">
             <input class="custom-input"
+                   id="custom-input_checkbox-dolor"
                    type="checkbox"
                    name="checkboxes-styled"
                    value="dolor">
@@ -6145,22 +6151,28 @@ a.category-slug.active {
         </label>
     - name: Radio buttons
       markup: |
-        <label class="form-label">
+        <label class="form-label"
+               for="custom-input_radio-lorem">
             <input class="custom-input"
+                   id="custom-input_radio-lorem"
                    type="radio"
                    name="radios-styled"
                    value="lorem">
             Lorem
         </label>
-        <label class="form-label">
+        <label class="form-label"
+               for="custom-input_radio-ipsum">
             <input class="custom-input"
+                   id="custom-input_radio-ipsum"
                    type="radio"
                    name="radios-styled"
                    value="ipsum">
             Ipsum
         </label>
-        <label class="form-label">
+        <label class="form-label"
+               for="custom-input_radio-dolor">
             <input class="custom-input"
+                   id="custom-input_radio-dolor"
                    type="radio"
                    name="radios-styled"
                    value="dolor">
