--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -250,6 +250,8 @@ select[multiple].success {
     // Hide the real input by using absolute positioning to layer a styled div
     // over it.
     &_input {
+        width: 4px;
+        height: 4px;
         position: absolute;
             top: 4px;
             left: 4px;
