--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7061,6 +7061,8 @@ a.category-slug.active {
 }
 
 .custom-input_input {
+  width: 4px;
+  height: 4px;
   position: absolute;
   top: 4px;
   left: 4px;
