--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6211,9 +6211,10 @@ a.category-slug.active {
 }
 .custom-input_input {
   position: absolute;
-  top: 2px;
-  left: 2px;
+  top: 4px;
+  left: 4px;
   z-index: 0;
+  appearance: none;
 }
 .custom-input_checkbox,
 .custom-input_radio {
