--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7062,9 +7062,10 @@ a.category-slug.active {
 
 .custom-input_input {
   position: absolute;
-  top: 2px;
-  left: 2px;
+  top: 4px;
+  left: 4px;
   z-index: 0;
+  appearance: none;
 }
 
 .custom-input_checkbox,
