--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6214,7 +6214,8 @@ a.category-slug.active {
   top: 4px;
   left: 4px;
   z-index: 0;
-  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
 }
 .custom-input_checkbox,
 .custom-input_radio {
