--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7065,7 +7065,8 @@ a.category-slug.active {
   top: 4px;
   left: 4px;
   z-index: 0;
-  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
 }
 
 .custom-input_checkbox,
